# PalWorldSaveTools

./: .gitignore  AutoCheckBases.cmd  AutoCheckBases.py  AutoDeleteNoSteamSaves.cmd  AutoDeleteNoSteamSaves.py  AutoDeleteNoXboxSaves.py  AutoInstallPip.cmd  AutoPackagesInstaller.cmd  GPSaveConverter.py  LICENSE  Level.sav  ListAllPiPPackages.cmd  Menu.cmd  Menu.py  PalWorldSaveTools.cmd  PalWorldSaveToolsMenu.cmd  PalWorldSaveToolsMenu.py  README.md  ReadMe.txt  UninstallAllPiPPackages.cmd  bases.cmd  char-export.cmd  char-export.py  character_transfer.py  clean_up.cmd  constants.py  convert.py  convert_json_to_sav.cmd  convert_level_location_finder.py  convert_players_location_finder.py  convert_sav_to_json.cmd  convertids.cmd  convertids.py  convertxycoords.bat  convertxycoords.cmd  coords.py  delete_inactive_players.py  delete_pals_save.cmd  delete_pals_save.py  fix_host_save.cmd  (+32 more)
Assets/: bases.py  character_transfer.py  convert.py  convertids.py  coords.py  delete_inactive_players.py  delete_pals_save.py  fix_host_save.py  game_pass_save_fix.py  import_libs.py  paldefender_bases.py  palguard_bases.py  palobject.py  palworld_save_pal.py  restore_map.py  scan_save.py  slot_injector.py  xgp_save_extract.py
PalWorldSave/: Level.sav
PalWorldSaveTools/: .gitignore  AutoDeleteNoXboxSaves.py  GPSaveConverter.py  LICENSE  PSP.py  README.md  fix_host_save.py  fix_save.py  game_pass_save_fix.py
Players/: 4E6DACB6000000000000000000000000.sav
character_transfer/: char-export.py  character_transfer.cmd
external_libs/: cityhash.cp313-win_amd64.pyd  (+1 more)
(+129 files in other folders)
